<resources>
    <string name="app_name">TheMovieDatabaseApp</string>
    <string name="back_drop_image">Back drop image</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="no_movies_found">No movies found</string>
    <string name="type_to_search">Type to search</string>
    <string name="search_hint">Search…</string>
    <string name="no_favorite_movie">No favorite movie</string>
    <string name="imdb_icon">Imdb Icon</string>
    <string name="now_playing">Now playing</string>
    <string name="overview">Overview</string>
    <string name="status">Status:</string>
    <string name="runtime">Runtime:</string>
    <string name="revenue">Revenue:</string>
    <string name="budget">Budget:</string>
    <string name="original_title">Original Title:</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unexpected_error_occurred">Unexpected error occurred</string>
    <string name="login">Login</string>
    <string name="wrong_credential">Wrong credential</string>
    <string name="user">User</string>
    <string name="password">Password</string>
</resources>