<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1e2748"
    tools:context=".ui.details.DetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvVoteAverageValue"
            app:layout_constraintEnd_toStartOf="@+id/btnFavoriteIcon"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/ivPoster"
            app:layout_constraintTop_toBottomOf="@+id/ivBackDrop"
            tools:text="Dumbo" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivPoster"
            android:layout_width="120dp"
            android:layout_height="170dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="160dp"
            android:elevation="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/ivBackDrop"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:contentDescription="@string/back_drop_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <View
            android:id="@+id/viewLoading"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#99516D9A"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:elevation="15dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            android:indeterminateTintMode="src_atop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/loadingGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="viewLoading,progressBar" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnFavoriteIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="#1e2748"
            android:src="@drawable/ic_baseline_favorite_border_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivBackDrop" />

        <TextView
            android:id="@+id/tvOverviewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/overview"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/ivPoster"
            app:layout_constraintTop_toBottomOf="@+id/ivPoster" />

        <TextView
            android:id="@+id/tvOverviewDescripton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvOverviewTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvOverviewTitle"
            tools:text="Washed-up MMA fighter Cole Young, unaware of his heritage, and hunted by Emperor Shang Tsung's best warrior, Sub-Zero, seeks out and trains with Earth's greatest champions as he prepares to stand against the enemies of Outworld in a high stakes battle for the universe." />

        <ImageView
            android:id="@+id/ivImdbIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_imdb"
            app:layout_constraintBottom_toTopOf="@+id/tvReleaseDateValue"
            app:layout_constraintStart_toStartOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/tvVoteAverageValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/ivImdbIcon"
            app:layout_constraintStart_toEndOf="@+id/ivImdbIcon"
            app:layout_constraintTop_toTopOf="@+id/ivImdbIcon"
            tools:text="6.3" />

        <TextView
            android:id="@+id/tvReleaseDateValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/ivPoster"
            app:layout_constraintStart_toStartOf="@+id/ivImdbIcon"
            tools:text="01/01/2022" />

        <TextView
            android:id="@+id/tvOriginalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/original_title"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/tvOverviewDescripton"
            app:layout_constraintTop_toBottomOf="@+id/tvOverviewDescripton" />

        <TextView
            android:id="@+id/tvOriginalTitleValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tvOriginalTitle"
            app:layout_constraintStart_toEndOf="@+id/tvOriginalTitle"
            app:layout_constraintTop_toTopOf="@+id/tvOriginalTitle"
            tools:text="The Dumbo" />

        <TextView
            android:id="@+id/tvBudget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/budget"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/tvOverviewDescripton"
            app:layout_constraintTop_toBottomOf="@+id/tvOriginalTitle" />

        <TextView
            android:id="@+id/tvBudgetValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tvBudget"
            app:layout_constraintStart_toEndOf="@+id/tvBudget"
            app:layout_constraintTop_toTopOf="@+id/tvBudget"
            tools:text="200000" />

        <TextView
            android:id="@+id/tvRevenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/revenue"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/tvBudget"
            app:layout_constraintTop_toBottomOf="@+id/tvBudget" />

        <TextView
            android:id="@+id/tvRevenueValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tvRevenue"
            app:layout_constraintStart_toEndOf="@+id/tvRevenue"
            app:layout_constraintTop_toTopOf="@+id/tvRevenue"
            tools:text="100000" />

        <TextView
            android:id="@+id/tvRuntime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/runtime"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/tvRevenue"
            app:layout_constraintTop_toBottomOf="@+id/tvRevenue" />

        <TextView
            android:id="@+id/tvRuntimeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tvRuntime"
            app:layout_constraintStart_toEndOf="@+id/tvRuntime"
            app:layout_constraintTop_toTopOf="@+id/tvRuntime"
            tools:text="110 minutes" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/status"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/tvRuntime"
            app:layout_constraintTop_toBottomOf="@+id/tvRuntime" />

        <TextView
            android:id="@+id/tvStatusValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tvStatus"
            app:layout_constraintStart_toEndOf="@+id/tvStatus"
            app:layout_constraintTop_toTopOf="@+id/tvStatus"
            tools:text="Released" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>